--- a/client/src/app/pages/guest/sign/sign.component.html
+++ b/client/src/app/pages/guest/sign/sign.component.html
@@ -4,30 +4,70 @@
 		<h4>Введіть ваші дані для подальшої роботи</h4>
 	</div>
 
-	<div>
+	<div *ngIf="activeForm === 'login'" class="login-form">
 		<label>
-			Ім'я
-			<input [(ngModel)]="user.name" type="text">
+			Email
+			<input [(ngModel)]="user.email" type="email" />
 		</label>
 
 		<label>
 			Пароль
-			<input [(ngModel)]="user.password" type="text">
+			<input [(ngModel)]="user.password" type="password" />
+		</label>
+
+		<button [disabled]="isLoginButtonDisabled" (click)="login()">
+			Увійти
+		</button>
+
+		<div>
+			<span (click)="activeForm = 'sign'"
+				>Немає акаунта, зареєструватись</span
+			>
+			<span>Забув пароль</span>
+		</div>
+	</div>
+
+	<div *ngIf="activeForm === 'sign'" class="sign-form">
+		<label>
+			Email
+			<input [(ngModel)]="user.email" type="email" />
+		</label>
+
+		<label>
+			ПІБ
+			<input [(ngModel)]="user.fullName" type="text" />
+		</label>
+
+		<label>
+			Пароль
+			<input [(ngModel)]="user.password" type="password" />
 		</label>
 
 		<label>
 			Повторіть пароль
-			<input [(ngModel)]="user.passwordCheck" type="text">
+			<input [(ngModel)]="user.passwordCheck" type="password" />
 		</label>
 
 		<label>
 			Спеціалізація
 			<select [(ngModel)]="user.speciality">
 				<option [value]="undefined">Не вибрано</option>
-				<option *ngFor="let speciality of config.specialities" [value]="speciality">{{speciality}}</option>
+				<option
+					*ngFor="let speciality of config.specialities"
+					[value]="speciality"
+				>
+					{{speciality}}
+				</option>
 			</select>
 		</label>
 
-		<button [disabled]="isSignButtonDisabled" (click)="signup()">Зареєструватись</button>
+		<button [disabled]="isSignButtonDisabled" (click)="signup()">
+			Зареєструватись
+		</button>
+
+		<div>
+			<span (click)="activeForm = 'login'">Вже є аккаунт, увійти</span>
+			<span>Забув пароль</span>
+		</div>
 	</div>
 </div>
