--- a/client/src/app/pages/guest/sign/sign.component.html
+++ b/client/src/app/pages/guest/sign/sign.component.html
@@ -1,6 +1,6 @@
 <div class="content">
 	<div>
-		<h2>Рєстрація</h2>
+		<h2>{{activeForm === 'login' ? 'Вхід' : 'Реєстрація'}}</h2>
 		<h4>Введіть ваші дані для подальшої роботи</h4>
 	</div>
 
