--- a/client/src/app/pages/user/profile/profile.component.html
+++ b/client/src/app/pages/user/profile/profile.component.html
@@ -57,6 +57,11 @@
 		</label>
 
 		<label>
+			Адреса
+			<input type="text" [(ngModel)]="user.address" />
+		</label>
+
+		<label>
 			Спеціалізація
 			<select [(ngModel)]="user.speciality">
 				<option [value]="undefined">Не вибрано</option>
