--- a/client/src/app/core/components/footer/footer.component.html
+++ b/client/src/app/core/components/footer/footer.component.html
@@ -2,8 +2,17 @@
 <footer>
 	<nav>
 		<ul class="navigation">
-			<li routerLink="/user/profile" class="navigation__item">Profile</li>
-			<li routerLink="/user/table" class="navigation__item">Table</li>
+			<li routerLink="/user/table" class="navigation__item">
+				<svg width="75" height="75" viewBox="0 0 75 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M38.25 10C38.25 10 18.9188 26.6875 8.11563 35.725C7.48125 36.3 7 37.1375 7 38.125C7 39.8531 8.39688 41.25 10.125 41.25H16.375V63.125C16.375 64.8531 17.7719 66.25 19.5 66.25H28.875C30.6031 66.25 32 64.85 32 63.125V50.625H44.5V63.125C44.5 64.85 45.8969 66.25 47.625 66.25H57C58.7281 66.25 60.125 64.8531 60.125 63.125V41.25H66.375C68.1031 41.25 69.5 39.8531 69.5 38.125C69.5 37.1375 69.0188 36.3 68.3031 35.725C57.575 26.6875 38.25 10 38.25 10Z" fill="white" fill-opacity="0.62"/>
+				</svg>					
+			</li>
+			<li routerLink="/user/profile" class="navigation__item">
+				<svg width="75" height="75" viewBox="0 0 75 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M37.5 37.5C44.4036 37.5 50 31.9036 50 25C50 18.0964 44.4036 12.5 37.5 12.5C30.5964 12.5 25 18.0964 25 25C25 31.9036 30.5964 37.5 37.5 37.5Z" fill="white" fill-opacity="0.62"/>
+					<path d="M37.5 43.75C18.4375 43.75 12.5 56.25 12.5 56.25V62.5H62.5V56.25C62.5 56.25 56.5625 43.75 37.5 43.75Z" fill="white" fill-opacity="0.62"/>
+				</svg>					
+			</li>
 		</ul>
 	</nav>
 </footer>
