--- a/client/src/app/pages/guest/sign/sign.component.scss
+++ b/client/src/app/pages/guest/sign/sign.component.scss
@@ -20,6 +20,7 @@
 			font-size: 24px;
 			font-weight: 700;
 			padding-bottom: 5px;
+			text-transform: uppercase;
 		}
 		span{
 			font-size: 18px;
