--- a/client/src/app/pages/user/profile/profile.component.scss
+++ b/client/src/app/pages/user/profile/profile.component.scss
@@ -9,14 +9,15 @@
 
 .file-label {
 	cursor: pointer;
-	width: 100px;
-	height: 100px;
-	border: 2px dashed #007bff;
+	width: 115px;
+	height: 153.655px;
+	border-radius: 16px;
+	background: rgba(87, 79, 79, 0.70);
+	backdrop-filter: blur(2px);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	border-radius: 4px;
 }
 
 .file-icon {
@@ -34,13 +35,27 @@
 	margin-top: 10px;
 }
 
+.file-delete{
+	position: absolute;
+    z-index: 99;
+    left: -5px;
+    top: -5px;
+}
+.file-change{
+	position: absolute;
+    z-index: 99;
+    right: -5px;
+    top: -5px;
+}
 .preview-image {
 	display: block;
-	width: 100px;
-	height: 100px;
+	width: 115px;
+	height: 153.655px;
 	margin-top: 10px;
-	border-radius: 4px;
+	border-radius: 16px;
 	object-fit: cover;
+	position: absolute;
+    top: -10px;
 }
 
 .your-photo-text {
@@ -48,4 +63,53 @@
 	margin-top: 10px;
 	text-align: center;
 	font-weight: bold;
+}
+
+.profile{
+	&__photos{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding-top: 20px;
+	}
+	&__info{
+		padding-top: 50px;
+		.label{
+			display: block;
+    		margin-bottom: 15px;
+			input{
+				margin-top: 5px;
+				svg{
+					fill:#FFF;
+					path{
+						fill:#FFF;
+					}
+				}
+				i{
+					color: #fff;
+				}
+			}
+			select{
+				margin-top: 5px;
+				display: block;
+				width: 100%;
+				border-radius: 120px !important;
+				background: rgba(87, 79, 79, 0.7) !important;
+				color: #FFF !important;
+				font-family: Montserrat !important;
+				font-size: 16px !important;
+				font-style: normal;
+				font-weight: 400;
+				padding: 15px !important;
+			}
+		}
+	}
+	&__btns{
+		display: flex;
+		justify-content: space-between;
+		flex-flow: row wrap;
+		.btn{
+			width: 150px;
+		}
+	}
 }
