add design changes

--- a/client/src/app/pages/user/list/list.component.html
+++ b/client/src/app/pages/user/list/list.component.html
@@ -1,26 +1,48 @@
-<div class="content">
-	<div class="specialities">
-		<div *ngFor="let speciality of config.specialities">{{speciality}}</div>
-	</div>
-
-	<div>
-		<div>
+<div class="wrapper">
+	<div class="main__top">
+		<div class="specialities main__specialities">
+			<div *ngFor="let speciality of config.specialities" class="main__specialities-item">{{speciality}}</div>
+		</div>
+	
+		<div class="main__find" >
+			<img src="assets/icons/find.svg" alt="">
 			<input type="text" placeholder="Пошук..." />
 		</div>
 	</div>
 
-	<div>
-		<div *ngFor="let user of us.users">
-			<div>
+	<div class="list">
+		<div class="list__wrap" *ngFor="let user of us.users">
+			<div class="list__img">
 				<img [src]="user.avatar" alt="" />
 			</div>
 
-			<div>
-				<div>{{user.fullName}}</div>
+			<div class="list__info">
+				<div class="list__info-wrap">
+					<div class="list__info-img">
+						<img src="assets/icons/user.svg" alt="">
+					</div>
+					<div class="list__info-text">
+						{{user.fullName}}
+					</div>
+				</div>
 
-				<div>{{user.phone}}</div>
+				<div class="list__info-wrap">
+					<div class="list__info-img">
+						<img src="assets/icons/phone.svg" alt="">
+					</div>
+					<div class="list__info-text">
+						{{user.phone}}
+					</div>
+				</div>
 
-				<div>{{user.city}}, {{user.address}}</div>
+				<div class="list__info-wrap">
+					<div class="list__info-img">
+						<img src="assets/icons/loc.svg" alt="">
+					</div>
+					<div class="list__info-text">
+						{{user.city}}, {{user.address}}
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
